Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19269

Crash when starting application (canReUseOutputPane)

XMLWordPrintable

      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0   libProjectExplorer.dylib      	0x000000011442b7e4 ProjectExplorer::RunControl::canReUseOutputPane(ProjectExplorer::RunControl const*) const + 4
      1   libProjectExplorer.dylib      	0x000000011449b855 ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow(ProjectExplorer::RunControl*) + 885
      2   libProjectExplorer.dylib      	0x000000011432a06f ProjectExplorer::ProjectExplorerPluginPrivate::startRunControl(ProjectExplorer::RunControl*) + 31
      3   libProjectExplorer.dylib      	0x0000000114329d2d ProjectExplorer::ProjectExplorerPluginPrivate::executeRunConfiguration(ProjectExplorer::RunConfiguration*, Core::Id) + 573
      4   libProjectExplorer.dylib      	0x0000000114322422 ProjectExplorer::ProjectExplorerPluginPrivate::buildQueueFinished(bool) + 610
      5   org.qt-project.QtCore         	0x000000010d1dcea4 QObject::event(QEvent*) + 788
      6   org.qt-project.QtWidgets      	0x000000010c511512 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306
      7   org.qt-project.QtWidgets      	0x000000010c51282f QApplication::notify(QObject*, QEvent*) + 383
      8   org.qt-project.QtCore         	0x000000010d1b3a5f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159
      9   org.qt-project.QtCore         	0x000000010d1b4c12 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 850
      10  libqcocoa.dylib               	0x000000010fcab86e 0x10fc82000 + 170094
      11  libqcocoa.dylib               	0x000000010fcac121 0x10fc82000 + 172321
      12  com.apple.CoreFoundation      	0x00007fff814b7321 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
      13  com.apple.CoreFoundation      	0x00007fff8149821d __CFRunLoopDoSources0 + 557
      14  com.apple.CoreFoundation      	0x00007fff81497716 __CFRunLoopRun + 934
      15  com.apple.CoreFoundation      	0x00007fff81497114 CFRunLoopRunSpecific + 420
      16  com.apple.HIToolbox           	0x00007fff809f7ebc RunCurrentEventLoopInMode + 240
      17  com.apple.HIToolbox           	0x00007fff809f7cf1 ReceiveNextEventCommon + 432
      18  com.apple.HIToolbox           	0x00007fff809f7b26 _BlockUntilNextEventMatchingListInModeWithFilter + 71
      19  com.apple.AppKit              	0x00007fff7ef90a54 _DPSNextEvent + 1120
      20  com.apple.AppKit              	0x00007fff7f70c7ee -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 2796
      21  com.apple.AppKit              	0x00007fff7ef853db -[NSApplication run] + 926
      22  libqcocoa.dylib               	0x000000010fcaaf1d 0x10fc82000 + 167709
      23  org.qt-project.QtCore         	0x000000010d1af5e2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418
      24  org.qt-project.QtCore         	0x000000010d1b4172 QCoreApplication::exec() + 402
      25  org.qt-project.qtcreator      	0x000000010c27e5e1 main + 16145
      26  libdyld.dylib                 	0x000000010d7b2235 start + 1
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes